0.2.3
- added support for Jython 2.5.

- cache module now uses Beaker's CacheManager
  object directly, so that all cache types are included.
  memcached is available as both "ext:memcached" and
  "memcached", the latter for backwards compatibility.

- added "cache" accessor to Template, Namespace.
  e.g.  ${local.cache.get('somekey')} or
  template.cache.invalidate_body()

- the Cache object now supports invalidate_def(name),
  invalidate_body(), invalidate_closure(name), 
  invalidate(key), which will remove the given key 
  from the cache, if it exists.  The cache arguments
  (i.e. storage type) are derived from whatever has
  been already persisted for that template.
  [ticket:92]

- For cache changes to work fully, Beaker 1.0.4 is required.
  1.0.1 and up will work as well with the exception of 
  cache expiry.  Note that Beaker 1.0.4 is **required**
  for applications which use dynamically generated keys,
  since previous versions will permanently store state in memory 
  for each individual key and thus use up all available memory.
  
- fixed the html_error_template not handling tracebacks from
  normal .py files with a magic encoding comment [ticket:88]

- added ModuleTemplate class, which allows the construction
  of a Template given a Python module generated by a previous
  Template.   This allows Python modules alone to be used
  as templates with no compilation step.   Source code
  and template source are optional but allow error reporting
  to work correctly.

- fixed Python 2.3 compat. in mako.pyparser [ticket:90]

- fix Babel 0.9.3 compatibility; stripping comment tags is now
  optional (and enabled by default).


0.2.2
- cached blocks now use the current context when rendering
an expired section, instead of the original context
passed in [ticket:87]
- fixed a critical issue regarding caching, whereby 
a cached block would raise an error when called within a
cache-refresh operation that was initiated after the 